src/qir/snapshots/hugr_qir__qir__qsystem_ext__test__emit@llvm14_tket2.qsystem.LazyMeasure.snap
---
source: src/qir/qsystem_ext.rs
expression: mod_str
---
; ModuleID = 'test_context'
source_filename = "test_context"

%QUBIT = type opaque
%RESULT = type opaque

define i1 @_hl.main.1(%QUBIT* %0) {
alloca_block:
  br label %entry_block

entry_block:                                      ; preds = %alloca_block
  %1 = call %RESULT* @__quantum__qis__mz__body(%QUBIT* %0)
  %2 = call i1 @__quantum__qis__read_result__body(%RESULT* %1)
  %3 = select i1 %2, i1 true, i1 false
  ret i1 %3
}

declare %RESULT* @__quantum__qis__mz__body(%QUBIT*)

declare i1 @__quantum__qis__read_result__body(%RESULT*)
