src/qir/snapshots/hugr_qir__qir__qsystem_ext__test__emit@llvm14_tket2.qsystem.MeasureReset.snap
---
source: src/qir/qsystem_ext.rs
expression: mod_str
---
; ModuleID = 'test_context'
source_filename = "test_context"

%QUBIT = type opaque
%RESULT = type opaque

define { %QUBIT*, i1 } @_hl.main.1(%QUBIT* %0) {
alloca_block:
  br label %entry_block

entry_block:                                      ; preds = %alloca_block
  %1 = call %RESULT* @__QIR__CONV_QUBIT_TO_RESULT(%QUBIT* %0)
  call void @__quantum__qis__mz__body(%QUBIT* %0, %RESULT* %1)
  call void @__quantum__qis__reset__body(%QUBIT* %0)
  %2 = call i1 @__quantum__qis__read_result__body(%RESULT* %1)
  %3 = select i1 %2, i1 true, i1 false
  %mrv = insertvalue { %QUBIT*, i1 } undef, %QUBIT* %0, 0
  %mrv6 = insertvalue { %QUBIT*, i1 } %mrv, i1 %3, 1
  ret { %QUBIT*, i1 } %mrv6
}

declare %RESULT* @__QIR__CONV_QUBIT_TO_RESULT(%QUBIT*)

declare void @__quantum__qis__mz__body(%QUBIT*, %RESULT*)

declare void @__quantum__qis__reset__body(%QUBIT*)

declare i1 @__quantum__qis__read_result__body(%RESULT*)
