src/qir/snapshots/hugr_qir__qir__qsystem_ext__test__emit@llvm14_tket2.qsystem.PhasedX.snap
---
source: src/qir/qsystem_ext.rs
expression: mod_str
---
; ModuleID = 'test_context'
source_filename = "test_context"

%QUBIT = type opaque

define %QUBIT* @_hl.main.1(%QUBIT* %0, double %1, double %2) {
alloca_block:
  br label %entry_block

entry_block:                                      ; preds = %alloca_block
  call void @__quantum__qis__phasedx__body(double %1, double %2, %QUBIT* %0)
  ret %QUBIT* %0
}

declare void @__quantum__qis__phasedx__body(double, double, %QUBIT*)
