src/qir/snapshots/hugr_qir__qir__qsystem_ext__test__emit@pre-mem2reg@llvm14_tket2.qsystem.MeasureReset.snap
---
source: src/qir/qsystem_ext.rs
expression: mod_str
---
; ModuleID = 'test_context'
source_filename = "test_context"

%QUBIT = type opaque
%RESULT = type opaque

define { %QUBIT*, i1 } @_hl.main.1(%QUBIT* %0) {
alloca_block:
  %"0" = alloca %QUBIT*, align 8
  %"1" = alloca i1, align 1
  %"2_0" = alloca %QUBIT*, align 8
  %"4_0" = alloca %QUBIT*, align 8
  %"4_1" = alloca i1, align 1
  br label %entry_block

entry_block:                                      ; preds = %alloca_block
  store %QUBIT* %0, %QUBIT** %"2_0", align 8
  %"2_01" = load %QUBIT*, %QUBIT** %"2_0", align 8
  %1 = call %RESULT* @__quantum__qis__m__body(%QUBIT* %"2_01")
  call void @__quantum__qis__reset__body(%QUBIT* %"2_01")
  %2 = call i1 @__quantum__qis__read_result__body(%RESULT* %1)
  %3 = select i1 %2, i1 true, i1 false
  store %QUBIT* %"2_01", %QUBIT** %"4_0", align 8
  store i1 %3, i1* %"4_1", align 1
  %"4_02" = load %QUBIT*, %QUBIT** %"4_0", align 8
  %"4_13" = load i1, i1* %"4_1", align 1
  store %QUBIT* %"4_02", %QUBIT** %"0", align 8
  store i1 %"4_13", i1* %"1", align 1
  %"04" = load %QUBIT*, %QUBIT** %"0", align 8
  %"15" = load i1, i1* %"1", align 1
  %mrv = insertvalue { %QUBIT*, i1 } undef, %QUBIT* %"04", 0
  %mrv6 = insertvalue { %QUBIT*, i1 } %mrv, i1 %"15", 1
  ret { %QUBIT*, i1 } %mrv6
}

declare %RESULT* @__quantum__qis__m__body(%QUBIT*)

declare void @__quantum__qis__reset__body(%QUBIT*)

declare i1 @__quantum__qis__read_result__body(%RESULT*)
